--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
   <h1>Hello, world! </h1>
-  <p>This is my first GitHub Pages website.</p>
+  <p>This is my first GitHub Pages website.</p><a href="games.html">Check Out My Roblox Games</a>
+
 </body>
 </html>
