--- a/games.html
+++ b/games.html
@@ -46,7 +46,7 @@
 
   <div class="game-list">
     <div class="game">
-      <img src="https://via.placeholder.com/250x140?text=Game+1" alt="Game 1">
+      <img src="https://t1.rbxcdn.com/180DAY-72e3bf7380cc3afa336d930623036561" alt="Game 1">
       <h3>Zombie Rush</h3>
       <a href="https://www.roblox.com/games/YOUR_GAME_ID" target="_blank">Play on Roblox</a>
     </div>
