--- a/games.html
+++ b/games.html
@@ -47,7 +47,7 @@
   <div class="game-list">
     <div class="game">
       <img src="https://t1.rbxcdn.com/180DAY-72e3bf7380cc3afa336d930623036561" alt="Game 1">
-      <h3>Zombie Rush</h3>
+      <h3>Racing Simulator X</h3>
       <a href="https://www.roblox.com/games/YOUR_GAME_ID" target="_blank">Play on Roblox</a>
     </div>
 
