--- a/games.html
+++ b/games.html
@@ -53,7 +53,7 @@
 
     <div class="game">
       <img src="https://via.placeholder.com/250x140?text=Game+2" alt="Game 2">
-      <h3>Epic Obby</h3>
+      <h3>Rails</h3>
       <a href="https://www.roblox.com/games/YOUR_GAME_ID" target="_blank">Play on Roblox</a>
     </div>
 
