--- a/games.html
+++ b/games.html
@@ -48,7 +48,7 @@
     <div class="game">
       <img src="https://t1.rbxcdn.com/180DAY-72e3bf7380cc3afa336d930623036561" alt="Game 1">
       <h3>Racing Simulator X</h3>
-      <a href="https://www.roblox.com/games/YOUR_GAME_ID" target="_blank">Play on Roblox</a>
+      <a href="https://www.roblox.com/games/96519025443918/Racing-simulator-X" target="_blank">Play on Roblox</a>
     </div>
 
     <div class="game">
