--- a/index.html
+++ b/index.html
@@ -2,10 +2,60 @@
 <html>
 <head>
   <title>Welcome to My Website</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #333;
+      color: white;
+      padding: 20px 0;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 36px;
+    }
+
+    p {
+      font-size: 18px;
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    a {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #00b3ff;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      margin-top: 20px;
+      text-align: center;
+    }
+
+    a:hover {
+      background-color: #0077b3;
+    }
+
+    .container {
+      padding: 40px;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hello, world! </h1>
-  <p>This is my first GitHub Pages website.</p><a href="games.html">Check Out My Roblox Games</a>
+  <header>
+    <h1>Hello, World!</h1>
+  </header>
 
+  <div class="container">
+    <p>This is my first GitHub Pages website.</p>
+    <a href="games.html">Check Out My Roblox Games</a>
+  </div>
 </body>
 </html>
