--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 </head>
 <body>
   <header>
-    <h1>Hello, World!</h1>
+    <h1>These are my Roblox games</h1>
   </header>
 
   <div class="container">
-    <p>This is my first GitHub Pages website.</p>
+    <p>Play my games here.</p>
     <a href="games.html">Check Out My Roblox Games</a>
   </div>
 </body>
