--- a/index.html
+++ b/index.html
@@ -46,6 +46,37 @@
       padding: 40px;
       text-align: center;
     }
+
+    /* Mobile-friendly styles */
+    @media screen and (max-width: 768px) {
+      h1 {
+        font-size: 30px;
+      }
+
+      p {
+        font-size: 16px;
+      }
+
+      a {
+        font-size: 16px;
+        padding: 12px 25px;
+      }
+    }
+
+    @media screen and (max-width: 480px) {
+      h1 {
+        font-size: 26px;
+      }
+
+      p {
+        font-size: 14px;
+      }
+
+      a {
+        font-size: 14px;
+        padding: 10px 20px;
+      }
+    }
   </style>
 </head>
 <body>
