--- a/games.html
+++ b/games.html
@@ -52,9 +52,9 @@
   </div>
 
     <div class="game">
-      <img src="https://via.placeholder.com/250x140?text=Game+2" alt="Game 2">
+      <img src="https://t7.rbxcdn.com/180DAY-57443971b3b446cb6440e98718617428" alt="Game 2">
       <h3>Rails</h3>
-      <a href="https://www.roblox.com/games/YOUR_GAME_ID" target="_blank">Play on Roblox</a>
+      <a href="https://www.roblox.com/games/108858541953940/Rails" target="_blank">Play on Roblox</a>
     </div>
 
     <!-- Add more games here -->
