--- a/index.html
+++ b/index.html
@@ -1,75 +1,94 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to My Website</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f0f0f0;
+      color: #333;
+      line-height: 1.6;
     }
 
     header {
-      background-color: #333;
+      background-color: #1a1a1a;
       color: white;
-      padding: 20px 0;
+      padding: 40px 20px;
       text-align: center;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
 
     h1 {
       font-size: 36px;
+      margin-bottom: 10px;
     }
 
     p {
-      font-size: 18px;
-      text-align: center;
-      margin-top: 20px;
+      font-size: 20px;
+      margin-bottom: 20px;
     }
 
     a {
-      display: inline-block;
-      padding: 10px 20px;
+      font-size: 18px;
+      padding: 12px 30px;
       background-color: #00b3ff;
       color: white;
       text-decoration: none;
-      border-radius: 5px;
-      margin-top: 20px;
-      text-align: center;
+      border-radius: 30px;
+      transition: background-color 0.3s ease, transform 0.3s ease;
     }
 
     a:hover {
       background-color: #0077b3;
+      transform: translateY(-3px);
     }
 
     .container {
-      padding: 40px;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 40px 20px;
       text-align: center;
     }
 
-    /* Mobile-friendly styles */
+    /* Responsive styles */
     @media screen and (max-width: 768px) {
+      header {
+        padding: 30px 15px;
+      }
+      
       h1 {
-        font-size: 30px;
+        font-size: 32px;
       }
 
       p {
-        font-size: 16px;
+        font-size: 18px;
       }
 
       a {
         font-size: 16px;
-        padding: 12px 25px;
+        padding: 10px 25px;
       }
     }
 
     @media screen and (max-width: 480px) {
+      header {
+        padding: 20px 10px;
+      }
+
       h1 {
-        font-size: 26px;
+        font-size: 28px;
       }
 
       p {
-        font-size: 14px;
+        font-size: 16px;
       }
 
       a {
@@ -80,13 +99,15 @@
   </style>
 </head>
 <body>
+
   <header>
     <h1>These are my Roblox games</h1>
+    <p>Explore and play my awesome games!</p>
   </header>
 
   <div class="container">
-    <p>Play my games here.</p>
     <a href="games.html">Check Out My Roblox Games</a>
   </div>
+
 </body>
 </html>
