--- a/games.html
+++ b/games.html
@@ -58,9 +58,9 @@
     </div>
 
     <div class="game">
-      <img src="https://t7.rbxcdn.com/180DAY-57443971b3b446cb6440e98718617428" alt="Game 2">
-      <h3>Rails</h3>
-      <a href="https://www.roblox.com/games/108858541953940/Rails" target="_blank">Play on Roblox</a>
+      <img src="https://t5.rbxcdn.com/180DAY-c239841c976f825fcf18284efdd1955a" alt="Game 2">
+      <h3>HPL Battles</h3>
+      <a href="https://www.roblox.com/games/101772921653305/HPL-Battles" target="_blank">Play on Roblox</a>
     </div>
 
     <!-- Add more games here -->
