--- a/games.html
+++ b/games.html
@@ -1,35 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Roblox Games</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: Arial, sans-serif;
       padding: 20px;
       background-color: #f4f4f4;
+      margin: 0;
     }
+
     h1 {
       color: #222;
+      text-align: center;
+      margin-bottom: 30px;
     }
+
     .game-list {
       display: flex;
       flex-wrap: wrap;
+      justify-content: center;
       gap: 20px;
     }
+
     .game {
       background: white;
       padding: 15px;
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       width: 250px;
+      transition: transform 0.2s;
     }
+
+    .game:hover {
+      transform: translateY(-5px);
+    }
+
     .game img {
       width: 100%;
       border-radius: 8px;
     }
+
     .game h3 {
-      margin-top: 10px;
+      margin: 10px 0 8px;
+      font-size: 18px;
     }
+
     .game a {
       display: inline-block;
       margin-top: 8px;
@@ -38,32 +60,53 @@
       color: white;
       text-decoration: none;
       border-radius: 5px;
+      font-size: 14px;
+    }
+
+    .game a:hover {
+      background: #0077b3;
+    }
+
+    /* Responsive for mobile */
+    @media screen and (max-width: 600px) {
+      .game {
+        width: 90%;
+      }
+
+      .game h3 {
+        font-size: 16px;
+      }
+
+      .game a {
+        font-size: 13px;
+        padding: 7px 10px;
+      }
     }
   </style>
 </head>
 <body>
+
   <h1>My Roblox Games</h1>
 
   <div class="game-list">
-  <div class="game">
-    <img src="https://t1.rbxcdn.com/180DAY-72e3bf7380cc3afa336d930623036561" alt="Game 1">
-    <h3>Racing Simulator X</h3>
-    <a href="https://www.roblox.com/games/96519025443918/Racing-simulator-X" target="_blank">Play on Roblox</a>
-  </div>
+    <div class="game">
+      <img src="https://t1.rbxcdn.com/180DAY-72e3bf7380cc3afa336d930623036561" alt="Racing Simulator X">
+      <h3>Racing Simulator X</h3>
+      <a href="https://www.roblox.com/games/96519025443918/Racing-simulator-X" target="_blank">Play on Roblox</a>
+    </div>
 
     <div class="game">
-      <img src="https://t7.rbxcdn.com/180DAY-57443971b3b446cb6440e98718617428" alt="Game 2">
+      <img src="https://t7.rbxcdn.com/180DAY-57443971b3b446cb6440e98718617428" alt="Rails">
       <h3>Rails</h3>
       <a href="https://www.roblox.com/games/108858541953940/Rails" target="_blank">Play on Roblox</a>
     </div>
 
     <div class="game">
-      <img src="https://t5.rbxcdn.com/180DAY-c239841c976f825fcf18284efdd1955a" alt="Game 2">
+      <img src="https://t5.rbxcdn.com/180DAY-c239841c976f825fcf18284efdd1955a" alt="HPL Battles">
       <h3>HPL Battles</h3>
       <a href="https://www.roblox.com/games/101772921653305/HPL-Battles" target="_blank">Play on Roblox</a>
     </div>
-
-    <!-- Add more games here -->
   </div>
+
 </body>
 </html>
