--- a/pygames.html
+++ b/pygames.html
@@ -86,7 +86,7 @@
     <div class="game">
       <img src="https://i.imgur.com/u7zKeGD.png" alt="Shark Game">
       <h3>Shark Adventure</h3>
-      <a href="https://inklinguy.github.io/mywebsite/pythongames/"">Play Game</a>
+      <a href="https://inklinguy.github.io/mywebsite/sharkgame/"">Play Game</a>
     </div>
 
     <!-- Add more games below using the same structure -->
