--- a/webgames.html
+++ b/webgames.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Python Games</title>
+  <title>My Webgames Games</title>
   <style>
     * {
       box-sizing: border-box;
