--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
 <body>
 
   <header>
-    <h1>These are my Roblox and Python games</h1>
+    <h1>These are my Roblox and Web Games</h1>
     <p>Explore and play my awesome games!</p>
   </header>
 
   <div class="container">
     <p>Play my games here:</p>
     <a href="games.html">Check Out My Roblox Games</a>
-    <a href="pygames.html">Check Out My Web Games</a>
+    <a href="webgames.html">Check Out My Web Games</a>
   </div>
 
 </body>
