--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <div class="container">
     <p>Play my games here:</p>
     <a href="games.html">Check Out My Roblox Games</a>
-    <a href="webgames.html">Check Out My Web Games</a>
+    <a href="Webgames.html">Check Out My Web Games</a>
   </div>
 
 </body>
