--- a/Webgames.html
+++ b/Webgames.html
@@ -84,7 +84,7 @@
 
     <!-- SHARK GAME CARD -->
     <div class="game">
-      <img src="https://i.imgur.com/u7zKeGD.png" alt="Shark Game">
+      <img src="https://static.vecteezy.com/system/resources/previews/013/537/020/non_2x/cartoon-drawing-of-a-shark-vector.jpg" alt="Shark Game">
       <h3>Shark Adventure</h3>
       <a href="https://inklinguy.github.io/mywebsite/Webgames/sharkgame"">Play Game</a>
     </div>
