--- a/Webgames.html
+++ b/Webgames.html
@@ -69,6 +69,21 @@
       background: #005c99;
     }
 
+    .home-button {
+      padding: 10px 15px;
+      background-color: #007acc;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      display: inline-block;
+      margin-bottom: 20px;
+      font-size: 16px;
+    }
+
+    .home-button:hover {
+      background-color: #005c99;
+    }
+
     @media screen and (max-width: 600px) {
       .game {
         width: 90%;
@@ -78,6 +93,8 @@
 </head>
 <body>
 
+  <a href="https://inklinguy.github.io/mywebsite/" class="home-button">Home</a> <!-- Home button -->
+
   <h1>My Webgames Games</h1>
 
   <div class="game-list">
@@ -86,7 +103,7 @@
     <div class="game">
       <img src="https://static.vecteezy.com/system/resources/previews/013/537/020/non_2x/cartoon-drawing-of-a-shark-vector.jpg" alt="Shark Game">
       <h3>Shark Adventure</h3>
-      <a href="https://inklinguy.github.io/mywebsite/Webgames/sharkgame"">Play Game</a>
+      <a href="https://inklinguy.github.io/mywebsite/Webgames/sharkgame">Play Game</a>
     </div>
 
     <!-- Add more games below using the same structure -->
