--- a/games.html
+++ b/games.html
@@ -67,6 +67,22 @@
       background: #0077b3;
     }
 
+    /* Home Button */
+    .home-button {
+      padding: 10px 15px;
+      background-color: #007acc;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      display: inline-block;
+      margin-bottom: 20px;
+      font-size: 16px;
+    }
+
+    .home-button:hover {
+      background-color: #005c99;
+    }
+
     /* Responsive for mobile */
     @media screen and (max-width: 600px) {
       .game {
@@ -85,6 +101,8 @@
   </style>
 </head>
 <body>
+
+  <a href="https://inklinguy.github.io/mywebsite/" class="home-button">Home</a> <!-- Home button -->
 
   <h1>My Roblox Games</h1>
 
