--- a/index.html
+++ b/index.html
@@ -11,18 +11,30 @@
       box-sizing: border-box;
     }
 
-    body {
+    html, body {
+      height: 100%;
       font-family: 'Arial', sans-serif;
       color: #333;
       line-height: 1.6;
       background-size: cover;
-      background-position: center;
+      background-position: center center;
       background-repeat: no-repeat;
       transition: background-image 1s ease-in-out;
     }
 
+    body::before {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.6); /* overlay for readability */
+      z-index: -1;
+    }
+
     header {
-      background-color: rgba(0, 0, 0, 0.6);
+      background-color: rgba(0, 0, 0, 0.7);
       color: white;
       padding: 40px 20px;
       text-align: center;
@@ -45,7 +57,7 @@
       max-width: 1200px;
       margin: 0 auto;
       text-align: center;
-      background-color: rgba(255, 255, 255, 0.8);
+      background-color: rgba(255, 255, 255, 0.85); /* readable container */
       border-radius: 20px;
     }
 
