--- a/index.html
+++ b/index.html
@@ -13,43 +13,42 @@
 
     html, body {
       height: 100%;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: start;
       font-family: 'Arial', sans-serif;
-      color: #333;
+      color: #fff;
       line-height: 1.6;
       background-size: cover;
-      background-position: center center;
+      background-position: center;
       background-repeat: no-repeat;
       transition: background-image 1s ease-in-out;
     }
 
     body::before {
-      content: '';
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(255, 255, 255, 0.6); /* overlay for readability */
-      z-index: -1;
+      content: none;
     }
 
     header {
-      background-color: rgba(0, 0, 0, 0.7);
+      background-color: rgba(0, 0, 0, 0.6);
       color: white;
       padding: 40px 20px;
       text-align: center;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     }
 
     h1 {
       font-size: 36px;
       margin-bottom: 10px;
+      text-shadow: 1px 1px 3px #000;
     }
 
     p {
       font-size: 20px;
       text-align: center;
       margin: 20px 0;
+      text-shadow: 1px 1px 2px #000;
     }
 
     .container {
@@ -57,8 +56,8 @@
       max-width: 1200px;
       margin: 0 auto;
       text-align: center;
-      background-color: rgba(255, 255, 255, 0.85); /* readable container */
-      border-radius: 20px;
+      /* No background or blur — show wallpaper behind */
+      background: none;
     }
 
     a {
@@ -71,6 +70,7 @@
       border-radius: 30px;
       margin: 10px;
       transition: background-color 0.3s ease, transform 0.3s ease;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     }
 
     a:hover {
@@ -124,46 +124,4 @@
     <p>Explore and play my awesome games!</p>
   </header>
 
-  <div class="container">
-    <p>Play my games here:</p>
-    <a href="games.html">Check Out My Roblox Games</a>
-    <a href="Webgames.html">Check Out My Web Games</a>
-  </div>
-
-  <script>
-    const imageBaseURL = 'https://inklinguy.github.io/mywebsite/images/';
-    const imageExtensions = ['png', 'jpg', 'jpeg'];
-
-    async function fetchImageList() {
-      try {
-        const res = await fetch('https://api.github.com/repos/Inklinguy/mywebsite/contents/images');
-        const files = await res.json();
-        return files
-          .filter(file => file.type === 'file')
-          .filter(file => imageExtensions.some(ext => file.name.toLowerCase().endsWith(ext)))
-          .map(file => imageBaseURL + encodeURIComponent(file.name));
-      } catch (err) {
-        console.error('Error fetching image list:', err);
-        return [];
-      }
-    }
-
-    async function startBackgroundRotation() {
-      const images = await fetchImageList();
-      if (images.length === 0) return;
-
-      let index = 0;
-      function rotate() {
-        document.body.style.backgroundImage = `url('${images[index]}')`;
-        index = (index + 1) % images.length;
-      }
-
-      rotate();
-      setInterval(rotate, 10000); // Rotate every 10 seconds
-    }
-
-    startBackgroundRotation();
-  </script>
-
-</body>
-</html>
+  <div cla
