--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome to My Website</title>
+  <title>My Games</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -13,106 +14,96 @@
 
     html, body {
       height: 100%;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: start;
-      font-family: 'Arial', sans-serif;
+      width: 100%;
+      font-family: 'Inter', sans-serif;
       color: #fff;
-      line-height: 1.6;
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
       transition: background-image 1s ease-in-out;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
 
     body::before {
-      content: none;
+      content: "";
+      position: fixed;
+      top: 0; left: 0; width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.3);
+      z-index: 0;
+      backdrop-filter: blur(6px);
     }
 
     header {
-      background-color: rgba(0, 0, 0, 0.6);
-      color: white;
-      padding: 40px 20px;
+      z-index: 1;
       text-align: center;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      margin-bottom: 30px;
     }
 
-    h1 {
-      font-size: 36px;
-      margin-bottom: 10px;
-      text-shadow: 1px 1px 3px #000;
+    header h1 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.6);
     }
 
-    p {
-      font-size: 20px;
-      text-align: center;
-      margin: 20px 0;
-      text-shadow: 1px 1px 2px #000;
+    header p {
+      font-size: 1.2rem;
+      font-weight: 400;
+      margin-top: 10px;
+      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
     }
 
     .container {
-      padding: 40px 20px;
-      max-width: 1200px;
-      margin: 0 auto;
+      z-index: 1;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 20px;
+      padding: 30px 40px;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
       text-align: center;
-      /* No background or blur — show wallpaper behind */
-      background: none;
+    }
+
+    .container p {
+      font-size: 1.2rem;
+      margin-bottom: 20px;
+      color: #fff;
+      text-shadow: 0 0 3px #000;
     }
 
     a {
       display: inline-block;
-      padding: 12px 30px;
-      font-size: 18px;
-      background-color: #00b3ff;
-      color: white;
-      text-decoration: none;
-      border-radius: 30px;
       margin: 10px;
-      transition: background-color 0.3s ease, transform 0.3s ease;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+      padding: 12px 30px;
+      font-size: 1rem;
+      font-weight: 600;
+      text-decoration: none;
+      color: white;
+      background: #00b3ff;
+      border-radius: 50px;
+      transition: 0.3s ease;
+      box-shadow: 0 4px 15px rgba(0, 179, 255, 0.4);
     }
 
     a:hover {
-      background-color: #0077b3;
-      transform: translateY(-3px);
+      background: #0077b3;
+      transform: translateY(-2px);
     }
 
-    @media screen and (max-width: 768px) {
-      header {
-        padding: 30px 15px;
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 1.8rem;
       }
 
-      h1 {
-        font-size: 32px;
-      }
-
-      p {
-        font-size: 18px;
+      .container {
+        width: 90%;
+        padding: 20px;
       }
 
       a {
-        font-size: 16px;
         padding: 10px 25px;
-      }
-    }
-
-    @media screen and (max-width: 480px) {
-      header {
-        padding: 20px 10px;
-      }
-
-      h1 {
-        font-size: 28px;
-      }
-
-      p {
-        font-size: 16px;
-      }
-
-      a {
-        font-size: 15px;
-        padding: 10px 20px;
+        font-size: 0.9rem;
       }
     }
   </style>
@@ -124,4 +115,46 @@
     <p>Explore and play my awesome games!</p>
   </header>
 
-  <div cla
+  <div class="container">
+    <p>Play my games here:</p>
+    <a href="games.html">Check Out My Roblox Games</a>
+    <a href="Webgames.html">Check Out My Web Games</a>
+  </div>
+
+  <script>
+    const imageBaseURL = 'https://inklinguy.github.io/mywebsite/images/';
+    const imageExtensions = ['png', 'jpg', 'jpeg'];
+
+    async function fetchImageList() {
+      try {
+        const res = await fetch('https://api.github.com/repos/Inklinguy/mywebsite/contents/images');
+        const files = await res.json();
+        return files
+          .filter(file => file.type === 'file')
+          .filter(file => imageExtensions.some(ext => file.name.toLowerCase().endsWith(ext)))
+          .map(file => imageBaseURL + encodeURIComponent(file.name));
+      } catch (err) {
+        console.error('Error fetching image list:', err);
+        return [];
+      }
+    }
+
+    async function startBackgroundRotation() {
+      const images = await fetchImageList();
+      if (images.length === 0) return;
+
+      let index = 0;
+      function rotate() {
+        document.body.style.backgroundImage = `url('${images[index]}')`;
+        index = (index + 1) % images.length;
+      }
+
+      rotate();
+      setInterval(rotate, 10000); // rotate every 10 sec
+    }
+
+    startBackgroundRotation();
+  </script>
+
+</body>
+</html>
