--- a/Webgames.html
+++ b/Webgames.html
@@ -14,6 +14,10 @@
       padding: 20px;
       background-color: #f0f0f0;
       margin: 0;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      transition: background-image 1s ease-in-out;
     }
 
     h1 {
@@ -109,6 +113,44 @@
     <!-- Add more games below using the same structure -->
 
   </div>
+
+  <script>
+    // Define the path to the wimages folder
+    const imageBaseURL = 'https://inklinguy.github.io/mywebsite/wimages/';  // Path to the wimages folder
+    const imageExtensions = ['png', 'jpg', 'jpeg'];
+
+    // Fetch image list from the wimages folder
+    async function fetchImageList() {
+      try {
+        const res = await fetch('https://api.github.com/repos/Inklinguy/mywebsite/contents/wimages');  // Path to wimages folder
+        const files = await res.json();
+        return files
+          .filter(file => file.type === 'file')
+          .filter(file => imageExtensions.some(ext => file.name.toLowerCase().endsWith(ext)))
+          .map(file => imageBaseURL + encodeURIComponent(file.name));
+      } catch (err) {
+        console.error('Error fetching image list:', err);
+        return [];
+      }
+    }
+
+    // Start the background rotation with images from the wimages folder
+    async function startBackgroundRotation() {
+      const images = await fetchImageList();
+      if (images.length === 0) return;
+
+      let index = 0;
+      function rotate() {
+        document.body.style.backgroundImage = `url('${images[index]}')`;
+        index = (index + 1) % images.length;
+      }
+
+      rotate();
+      setInterval(rotate, 10000); // Rotate every 10 seconds
+    }
+
+    startBackgroundRotation();
+  </script>
 
 </body>
 </html>
