--- a/Webgames.html
+++ b/Webgames.html
@@ -105,7 +105,7 @@
 
   <a href="https://inklinguy.github.io/mywebsite/" class="home-button">Home</a>
 
-  <h1>My Webgames Games</h1>
+  <h1>My Web Games</h1>
 
   <div class="game-list">
     <!-- SHARK GAME CARD -->
