--- a/games.html
+++ b/games.html
@@ -123,7 +123,7 @@
     </div>
 
     <div class="game">
-      <img src="https://github.com/Inklinguy/mywebsite/blob/main/rimages/Screenshot%202025-08-06%20141405.png" alt="Rails">
+      <img src="https://t7.rbxcdn.com/180DAY-57443971b3b446cb6440e98718617428" alt="Rails">
       <h3>Rails</h3>
       <a href="https://www.roblox.com/games/108858541953940/Rails" target="_blank">Play on Roblox</a>
     </div>
